@@ -1,7 +1,8 @@
 package bio.singa.structure.algorithms.superimposition;
 
 import bio.singa.core.utility.Pair;
-import bio.singa.mathematics.algorithms.graphs.isomorphism.RISubgraphFinder;
+import bio.singa.mathematics.algorithms.graphs.MaximumCommonSubgraphFinder;
+import bio.singa.mathematics.graphs.model.GenericNode;
 import bio.singa.mathematics.vectors.Vector2D;
 import bio.singa.structure.model.interfaces.Atom;
 import bio.singa.structure.model.interfaces.LeafSubstructure;
@@ -15,24 +16,27 @@ import org.slf4j.LoggerFactory;
 
 import java.util.ArrayList;
 import java.util.List;
+import java.util.Set;
 import java.util.function.BiFunction;
 
 /**
- * A special version of the {@link SubstructureSuperimposer} that uses subgraph isomorphism to align a candidate
- * against a given reference fragment. This is useful if one wants to align, for example, ligands where no consistent
- * atom names are guaranteed.
+ * The most flexible {@link SubstructureSuperimposer} that uses maximum subgraph isomorphism detection to align two
+ * structures. As long as there is a shared maximum common subgraph of at least three atoms a meaningful alignment will
+ * be produced.
  *
  * @author fk
  */
-public class FragmentSubstructureSuperimposer extends SubstructureSuperimposer {
+public class MaximumCommonSubgraphSuperimposer extends SubstructureSuperimposer {
 
-    private static final Logger logger = LoggerFactory.getLogger(FragmentSubstructureSuperimposer.class);
+    private static final Logger logger = LoggerFactory.getLogger(MaximumCommonSubgraphSuperimposer.class);
+
+    // TODO abstract subgraph-based superimpositions (see FragmentsSubstructureSuperimposer)
     private static final BiFunction<MoleculeAtom, MoleculeAtom, Boolean> DEFAULT_ATOM_CONDITION = (a, b) -> a.getElement().equals(b.getElement());
     private static final BiFunction<MoleculeBond, MoleculeBond, Boolean> DEFAULT_BOND_CONDITION = (a, b) -> a.getType() == b.getType();
     private final BiFunction<MoleculeAtom, MoleculeAtom, Boolean> atomCondition;
     private final BiFunction<MoleculeBond, MoleculeBond, Boolean> bondCondition;
 
-    private FragmentSubstructureSuperimposer(List<LeafSubstructure<?>> reference, List<LeafSubstructure<?>> candidate, BiFunction<MoleculeAtom, MoleculeAtom, Boolean> atomCondition, BiFunction<MoleculeBond, MoleculeBond, Boolean> bondCondition) {
+    private MaximumCommonSubgraphSuperimposer(List<LeafSubstructure<?>> reference, List<LeafSubstructure<?>> candidate, BiFunction<MoleculeAtom, MoleculeAtom, Boolean> atomCondition, BiFunction<MoleculeBond, MoleculeBond, Boolean> bondCondition) {
         super(reference, candidate);
         this.atomCondition = atomCondition;
         this.bondCondition = bondCondition;
@@ -40,19 +44,18 @@ public class FragmentSubstructureSuperimposer extends SubstructureSuperimposer {
 
     public static SubstructureSuperimposition calculateSubstructureSuperimposition(List<LeafSubstructure<?>> reference,
                                                                                    List<LeafSubstructure<?>> candidate) throws SubstructureSuperimpositionException {
-        return new FragmentSubstructureSuperimposer(reference, candidate, DEFAULT_ATOM_CONDITION, DEFAULT_BOND_CONDITION).calculateSuperimposition();
+        return new MaximumCommonSubgraphSuperimposer(reference, candidate, DEFAULT_ATOM_CONDITION, DEFAULT_BOND_CONDITION).calculateSuperimposition();
     }
 
     public static SubstructureSuperimposition calculateSubstructureSuperimposition(List<LeafSubstructure<?>> reference,
                                                                                    List<LeafSubstructure<?>> candidate,
                                                                                    BiFunction<MoleculeAtom, MoleculeAtom, Boolean> atomCondition,
                                                                                    BiFunction<MoleculeBond, MoleculeBond, Boolean> bondCondition) throws SubstructureSuperimpositionException {
-        return new FragmentSubstructureSuperimposer(reference, candidate, atomCondition, bondCondition).calculateSuperimposition();
+        return new MaximumCommonSubgraphSuperimposer(reference, candidate, atomCondition, bondCondition).calculateSuperimposition();
     }
 
     @Override
     protected Pair<List<Atom>> defineAtoms() {
-        logger.debug("calculating subgraph of fragment alignment");
         List<Atom> referenceAtoms = new ArrayList<>();
         List<Atom> candidateAtoms = new ArrayList<>();
         for (int i = 0; i < reference.size(); i++) {
@@ -64,24 +67,23 @@ public class FragmentSubstructureSuperimposer extends SubstructureSuperimposer {
                 MoleculeGraph referenceGraph = MoleculeGraphs.createMoleculeGraphFromStructure((OakLeafSubstructure<?>) referenceLeafSubstructure);
                 MoleculeGraph candidateGraph = MoleculeGraphs.createMoleculeGraphFromStructure((OakLeafSubstructure<?>) candidateLeafSubstructure);
 
-                RISubgraphFinder<MoleculeAtom, MoleculeBond, Vector2D, Integer, MoleculeGraph> subGraphFinder;
+                MaximumCommonSubgraphFinder<MoleculeAtom, MoleculeBond, Vector2D, Integer, MoleculeGraph> mcs = new MaximumCommonSubgraphFinder<>(referenceGraph, candidateGraph, atomCondition, bondCondition);
+                List<Set<GenericNode<Pair<MoleculeAtom>>>> maximumCliques = mcs.getMaximumCliques();
 
-                // decide which substructure to use as pattern graph
-                if (referenceGraph.getNodes().size() <= candidateGraph.getNodes().size()) {
-                    subGraphFinder = new RISubgraphFinder<>(referenceGraph, candidateGraph, atomCondition, bondCondition);
-                } else {
-                    subGraphFinder = new RISubgraphFinder<>(candidateGraph, referenceGraph, atomCondition, bondCondition);
+                if (maximumCliques.isEmpty()) {
+                    logger.warn("no maximum common subgraph for {}-{}", referenceLeafSubstructure, candidateLeafSubstructure);
+                    continue;
                 }
-                if (subGraphFinder.getFullMatches().size() > 1) {
+
+                if (maximumCliques.size() > 1) {
                     // TODO add option to consider all isomorphisms
                     logger.warn("ambiguous solution found, choosing first one");
-                } else if (subGraphFinder.getFullMatches().isEmpty()) {
-                    logger.error("reference {} against candidate {} has no common subgraph", reference, candidate);
-                    throw new SubstructureSuperimpositionException("failed to define atoms for alignment, no common subgraph");
                 }
-                for (Pair<MoleculeAtom> moleculeAtomPair : subGraphFinder.getFullMatchPairs().get(0)) {
-                    referenceAtoms.add(referenceLeafSubstructure.getAtom(moleculeAtomPair.getFirst().getIdentifier()).orElseThrow(() -> new SubstructureSuperimpositionException("failed to get atoms")));
-                    candidateAtoms.add(candidateLeafSubstructure.getAtom(moleculeAtomPair.getSecond().getIdentifier()).orElseThrow(() -> new SubstructureSuperimpositionException("failed to get atoms")));
+
+                Set<GenericNode<Pair<MoleculeAtom>>> maximumClique = maximumCliques.get(0);
+                for (GenericNode<Pair<MoleculeAtom>> nodePair : maximumClique) {
+                    referenceAtoms.add(referenceLeafSubstructure.getAtom(nodePair.getContent().getFirst().getIdentifier()).orElseThrow(() -> new SubstructureSuperimpositionException("failed to get atoms")));
+                    candidateAtoms.add(candidateLeafSubstructure.getAtom(nodePair.getContent().getSecond().getIdentifier()).orElseThrow(() -> new SubstructureSuperimpositionException("failed to get atoms")));
                 }
             }
         }
